# algorithms

./: .gitignore  README.md  commit_message.txt  gauss.cc
ATIVIDADES AULA/: ATV - 2015-03-02 - alocacao de registro.c  ATV - 2015-03-02 - realocação de vetor.c  ATV 2015-03-03 - structs aninhadas.c  ATV 2015-03-03 - vetor structs aninhadas.c  ATV 2015-03-09 - alocando a primeira lista.c  ATV 2015-03-09 - alocando varias listas.c  ATV 2015-03-10 funcao imprimir lista.c  ATV 2015-03-31 - lista duplamente encadeada.c  ATV 2015-04-07 - Primeira Fila.c  ATV 2015-04-13 FUNÇOES COM FILA.c  ATV 2015-04-14 - PILHA.c
EXEMPLOS PROFESSOR/: 2015-03-09 - exemplo professor - lista.c  2015-03-23 alunos.c  FILA_REPRESENTADA_LISTA_ENCADEADA.c  LISTA_CIRCULAR.c  LISTA_DUPLA_ENCADEADA.c  LISTA_ENCADEADA_CIRCULAR.c  PILHA.c
EXERCÍCIOS/: 2015-03-23 - EXERCÍCIO 01.c  2015-03-23 - exerc 1 - Lista Aluno.c  2015-03-23.c  2015-03-28 - revisão lista.c  2015-03-29 revisão lista 2.c  2015-05-18 - arvore.c  2015-05-19 - arvore.c  ARVORE.c  LISTA_ENCADEADA_CIRCULAR.c  RECURSIVA.c  REVISÃO PROVA 01.C  REVISÃO PROVA 02.c  REVISÃO PROVA 03.c  enumeracao.c
L1_GiliardAlmeida de Godoi/: L1EX1.c  L1EX10.c  L1EX11.c  L1EX2.c  L1EX3.c  L1EX4.c  L1EX5.c  L1EX6.c  L1EX7.c  L1EX8.c  L1EX9.c
anotacoes/: beautiful-soap.md  functions.md  git.md  json.md  random.md  string.md
data-science-project/: README.md  pyproject.toml
data-science-project/data/: .gitignore
datastructure/: README.md  disjointsets.py  hash_table.py  heapfy.py  heapq_example.py
dvc-tutorial/: README.md  change.py  dvc.yaml  fake.py  (+1 more)
(+208 files in other folders)
